--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,14 @@
         "psr-0": { "Drupal\\": "src" }
     },
     "minimum-stability": "dev",
+    "prefer-stable" : true,
+    "require-dev" : {
+        "phpunit/phpunit" : "^5.1"
+    },
     "require": {
-        "symfony/dependency-injection": "~3.0"
+        "symfony/dependency-injection" : "~3.0",
+        "symfony/yaml" : "~2.8|~3.0",
+        "symfony/config" : "~2.8|~3.0",
+        "symfony/expression-language" : "~2.8|~3.0"
     }
 }
