--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,36 @@
 {
-    "name": "makinacorpus/drupal-sf-dic",
-    "type": "drupal-module",
-    "description": "Brings the vanilla Symfony 3 depency inject container component to Drupal 7 seamlessly along with a limited compatibility layer with Drupal 8 API",
-    "keywords": [],
-    "homepage": "http://github.com/makinacorpus/drupal-sf-dic",
-    "license": "GPL-2",
-    "authors": [
+    "name" : "makinacorpus/drupal-sf-dic",
+    "type" : "drupal-module",
+    "description" : "Brings the vanilla Symfony 3 depency inject container component to Drupal 7 seamlessly along with a limited compatibility layer with Drupal 8 API",
+    "homepage" : "http://github.com/makinacorpus/drupal-sf-dic",
+    "license" : "GPL-2",
+    "authors" : [
         {
-            "name": "Pierre Rineau",
-            "email": "pierre.rineau@makina-corpus.com"
+            "name" : "Pierre Rineau",
+            "email" : "pierre.rineau@makina-corpus.com"
         },
         {
-            "name": "Makina Corpus",
-            "homepage": "http://makina-corpus.com"
+            "name" : "Makina Corpus",
+            "homepage" : "http://makina-corpus.com"
         }
     ],
-    "autoload": {
-        "psr-0": { "Drupal\\": "src" }
+    "autoload" : {
+        "psr-4" : {
+            "MakinaCorpus\\Drupal\\Sf\\Container\\" : "src/"
+        },
+        "psr-0" : {
+            "Drupal" : "lib/"
+        },
+        "files" : [
+            "lib/Drupal.php"
+        ]
     },
-    "minimum-stability": "dev",
+    "minimum-stability" : "dev",
     "prefer-stable" : true,
     "require-dev" : {
         "phpunit/phpunit" : "^5.1"
     },
-    "require": {
+    "require" : {
         "symfony/dependency-injection" : "~3.0",
         "symfony/yaml" : "~2.8|~3.0",
         "symfony/config" : "~2.8|~3.0",
