Fixes a bad typo error in composer.json file (sorry)

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
             "MakinaCorpus\\Drupal\\Sf\\Container\\" : "src/"
         },
         "psr-0" : {
-            "Drupal\\ : "lib/"
+            "Drupal\\" : "lib/"
         },
         "files" : [
             "lib/Drupal.php"
