--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,13 @@
         "phpunit/phpunit" : "^5.1"
     },
     "require" : {
+        "psr/log" : "1.*",
         "symfony/dependency-injection" : "~3.0",
         "symfony/yaml" : "~2.8|~3.0",
         "symfony/config" : "~2.8|~3.0",
         "symfony/expression-language" : "~2.8|~3.0"
+    },
+    "suggests" : {
+        "monolog/monolog" : "*"
     }
 }
