Implemented the FormInterface::create() static factory method (got I hate Drupal 8)

--- a/sf_dic.services.yml
+++ b/sf_dic.services.yml
@@ -15,7 +15,7 @@ services:
   # Form builder
   form_builder:
     class: Drupal\Core\Form\FormBuilder
-    arguments: ["@logger.channel.form"]
+    arguments: ["@service_container", "@logger.channel.form"]
 
   # Logger that sends everything into the watchdog
   logger.watchdog:
