--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,11 @@
     },
     "require" : {
         "psr/log" : "1.*",
-        "symfony/dependency-injection" : "~3.0",
-        "symfony/yaml" : "~2.8|~3.0",
         "symfony/config" : "~2.8|~3.0",
-        "symfony/expression-language" : "~2.8|~3.0"
+        "symfony/dependency-injection" : "~3.0",
+        "symfony/event-dispatcher": "~2.8|~3.0",
+        "symfony/expression-language" : "~2.8|~3.0",
+        "symfony/yaml" : "~2.8|~3.0"
     },
     "suggests" : {
         "monolog/monolog" : "*"
