--- a/sf_dic.services.yml
+++ b/sf_dic.services.yml
@@ -52,6 +52,20 @@ services:
     factory: cache_factory:get
     arguments: [cache]
 
+  # Register arbitrarily a set of entity controllers which the core provides,
+  # this is not Drupal 8 compatible, since it only exposes a single
+  # entity.manager service (which is incredibly stupid)
+  # @todo
+  #   expose all controllers with their own service?
+  entity.manager:
+    public: false
+    class: Drupal\Core\Entity\EntityManager
+
+  # We are not going to use Drupal 8 event dispatcher, but hopefully the
+  # symfony vanilla one is API compatible
+  event_dispatcher:
+    class: Symfony\Component\EventDispatcher\EventDispatcher
+
   # Logger that sends everything into the watchdog
   logger.watchdog:
     public: false
@@ -93,15 +107,6 @@ services:
     public: false
     parent: logger.channel_base
     arguments: ['form']
-
-  # Register arbitrarily a set of entity controllers which the core provides,
-  # this is not Drupal 8 compatible, since it only exposes a single
-  # entity.manager service (which is incredibly stupid)
-  # @todo
-  #   expose all controllers with their own service?
-  entity.manager:
-    public: false
-    class: Drupal\Core\Entity\EntityManager
 
   # Empty testing service, it will contain all services this module provides
   # in order to be able to unit test it
