--- a/sf_dic.services.yml
+++ b/sf_dic.services.yml
@@ -10,6 +10,12 @@ services:
   request_stack:
     class: Symfony\Component\HttpFoundation\RequestStack
 
+  # Current logged in user, not exactly the same signature than Drupal 8
+  # but will be API compatible for most use cases
+  current_user:
+    class: Drupal\Core\Session\AccountProxy
+    arguments: ["@entity.manager"]
+
   # Pass-through to get the database connection via the service container,
   # available for being a dependency of other services
   database:
