fixed bundle template lookup that was accidentally broken

--- a/Resources/config/templating.yml
+++ b/Resources/config/templating.yml
@@ -36,7 +36,7 @@ services:
 
   templating.name_parser:
     class: MakinaCorpus\Drupal\Sf\Templating\DrupalTemplateNameParser
-    arguments: ['@templating.name_parser.legacy']
+    arguments: ['@kernel', '@templating.name_parser.legacy']
 
   templating.name_parser.legacy:
     class: MakinaCorpus\Drupal\Sf\Templating\TemplateNameParser
