added twig pager extension that uses drupal pager

--- a/Resources/config/templating.yml
+++ b/Resources/config/templating.yml
@@ -55,6 +55,11 @@ services:
     class: MakinaCorpus\Drupal\Sf\Twig\Extension\DrupalImageExtension
     tags: [{name: twig.extension}]
 
+  twig.extension.drupal_pager:
+    public: false
+    class: MakinaCorpus\Drupal\Sf\Twig\Extension\DrupalPagerExtension
+    tags: [{name: twig.extension}]
+
   twig.extension.drupal_render:
     public: false
     class: MakinaCorpus\Drupal\Sf\Twig\Extension\DrupalRenderExtension
