added the ability to register console command for when using makinacorpus/drupal-tooling alongside

--- a/sf_dic.services.yml
+++ b/sf_dic.services.yml
@@ -150,6 +150,10 @@ services:
     parent: logger.channel_base
     arguments: ['form']
 
+  sf_dic.console.command.dropkernel:
+    class: MakinaCorpus\Drupal\Sf\Command\DropKernelCacheCommand
+    tags: [{name: console.command}]
+
   # Empty testing service, it will contain all services this module provides
   # in order to be able to unit test it
   test_empty_service:
