--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -2,9 +2,9 @@ framework:
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
     #secret:          "%secret%"
-    #router:
-    #    resource: "%kernel.root_dir%/config/routing.yml"
-    #    strict_requirements: ~
+    router:
+        resource: "%kernel.drupal_site_path%/routing.yml"
+        strict_requirements: ~
     form:            ~
     #csrf_protection: ~
     validation:      { enable_annotations: true }
