http_kernel definition was broken due to missing controller_resolver in non fullstack environements

--- a/sf_dic.services.yml
+++ b/sf_dic.services.yml
@@ -9,6 +9,8 @@ services:
   kernel:
     class: Symfony\Component\HttpKernel\KernelInterface
     factory: [Drupal, _getKernel]
+  # Null implementation of the controller resolver when not using fullstack is
+  # spawned using the FrameworkBundleIntegrationPass compiler pass, get over it!
   # Following is the actual Symfony definition
   http_kernel:
     class: Symfony\Component\HttpKernel\HttpKernel
