--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
 		"symfony/expression-language" : "~3.0",
 		"symfony/http-foundation" : "~3.0",
 		"symfony/http-kernel" : "~3.0",
-		"symfony/yaml" : "~3.0"
+		"symfony/yaml" : "~2.8|~3.0"
 	},
 	"suggests" : {
 		"monolog/monolog" : "Integrates the Drupal 8 logger to monolog",
