when in debug mode, dump the symfony container xml definition for IDE that can read it

--- a/sf_dic.services.yml
+++ b/sf_dic.services.yml
@@ -1,3 +1,6 @@
+parameters:
+  debug.container.dump: '%kernel.cache_dir%/%kernel.container_class%.xml'
+
 services:
 
   # Register the container itself as a synthetic service for the modules to be
