--- a/Resources/config/templating.yml
+++ b/Resources/config/templating.yml
@@ -55,6 +55,11 @@ services:
     class: MakinaCorpus\Drupal\Sf\Twig\Extension\DrupalPathExtension
     tags: [{name: twig.extension}]
 
+  twig.extension.drupal_date:
+    public: false
+    class: MakinaCorpus\Drupal\Sf\Twig\Extension\DrupalDateExtension
+    tags: [{name: twig.extension}]
+
   #
   # Following are useful only for cache warmer, not sure we will ever use this
   # --
