cache warmer does more harm than good altogether with Drupal

--- a/Resources/config/templating.yml
+++ b/Resources/config/templating.yml
@@ -1,17 +1,14 @@
 services:
 
+  # Please note these are only partial overrides, when using Symfony full
+  # stack framework you will inherit from many other things, that may not
+  # always behave correctly.
+  # As of now, nothing ever failed except the cache_warmer, we don't really
+  # need because it can't work nicely with Drupal at this point.
+
   templating:
     class: Symfony\Bundle\TwigBundle\TwigEngine
     arguments: ['@twig', '@templating.name_parser', '@templating.locator']
-
-#
-# Is this even useful ?
-# --
-#
-#  templating.loader.chain:
-#    public: false
-#    class: Symfony\Component\Templating\Loader\ChainLoader
-#    arguments: ['@templating.locator']
 
   templating.locator:
     class: MakinaCorpus\Drupal\Sf\Templating\Loader\TemplateLocator
@@ -24,15 +21,6 @@ services:
   templating.loader.filesystem:
     public: false
     class: MakinaCorpus\Drupal\Sf\Templating\Loader\FilesystemLoader
-
-#
-# Is this even useful ?
-# --
-#
-#  templating.engine.delegating:
-#    public: false
-#    class: Symfony\Bundle\FrameworkBundle\Templating\DelegatingEngine
-#    arguments: ['@service_container', []]
 
   templating.name_parser:
     class: MakinaCorpus\Drupal\Sf\Templating\DrupalTemplateNameParser
@@ -59,25 +47,3 @@ services:
     public: false
     class: MakinaCorpus\Drupal\Sf\Twig\Extension\DrupalDateExtension
     tags: [{name: twig.extension}]
-
-  #
-  # Following are useful only for cache warmer, not sure we will ever use this
-  # --
-  #
-  # templating.filename_parser:
-  #   class: Symfony\Bundle\FrameworkBundle\Templating\TemplateFilenameParser
-  #   arguments: ['@kernel']
-  # templating.finder:
-  #   public: false
-  #   class: Symfony\Bundle\FrameworkBundle\CacheWarmer\TemplateFinder
-  #   arguments: ['@kernel', '@templating.filename_parser', '%kernel.root_dir%/Resources']
-  # templating.loader.cache:
-  #   public: false
-  #   class: Symfony\Component\Templating\Loader\CacheLoader
-  #   arguments: ['@templating.loader.wrapped', '%templating.loader.cache.path%']
-  # templating.cache_warmer.template_paths:
-  #   public: false
-  #   class: Symfony\Bundle\FrameworkBundle\CacheWarmer\TemplatePathsCacheWarmer
-  #   arguments: ['@templating.finder', '@templating.locator']
-  #   tags: [{name: kernel.cache_warmer, priority: 20}]
-  #
