--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -23,7 +23,7 @@ framework:
 
 twig:
     debug:            "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
+    strict_variables: false
     form_themes:
         - "bootstrap_3_layout.html.twig"
         - "bootstrap_3_horizontal_layout.html.twig"
