--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,9 @@
 	"require-dev" : {
 		"phpunit/phpunit" : "^5.1"
 	},
+    "bin" : [
+        "bin/console"
+    ],
 	"require" : {
 		"psr/log" : "1.*",
 		"symfony/config" : "~3.0",
