added render_block() and node_field() twig functions

--- a/sf_dic.services.yml
+++ b/sf_dic.services.yml
@@ -172,6 +172,10 @@ services:
     public: false
     class: MakinaCorpus\Drupal\Sf\Twig\Extension\DrupalRenderExtension
     tags: [{name: twig.extension}]
+  twig.extension.drupal_block:
+    public: false
+    class: MakinaCorpus\Drupal\Sf\Twig\Extension\DrupalBlockExtension
+    tags: [{name: twig.extension}]
 
   sf_dic.console.command.dropkernel:
     class: MakinaCorpus\Drupal\Sf\Command\DropKernelCacheCommand
