--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
 		"symfony/yaml" : "~2.8|~3.0 <3.2"
 	},
 	"suggests" : {
+        "makinacorpus/php-acl" : "Integrates with PHP ACL and send node access collect events",
 		"monolog/monolog" : "Integrates the Drupal 8 logger to monolog",
 		"symfony/symfony" : "Replaces Symfony components with the full stack framework and brings everything into Drupal"
 	}
