still can't use cache warmer, our custom template locator will cause the sf's one to fail

--- a/Resources/docs/sample/config/config.yml
+++ b/Resources/docs/sample/config/config.yml
@@ -40,7 +40,8 @@ twig:
 doctrine:
     dbal: {}
     orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
+        # @todo cannot disable this until the cache warmer isn't full restored
+        auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         mappings:
