--- a/modules/sf_acl/Resources/config/acl-security.yml
+++ b/modules/sf_acl/Resources/config/acl-security.yml
@@ -1,7 +1,15 @@
 services:
 
-  acl.security.voter:
+  acl.security.acl.voter:
     public: false
     class: MakinaCorpus\ACL\Impl\Symfony\ACLVoter
     arguments: ['@acl.manager']
+    tags: [{name: security.voter}]
+
+  # This is a very specific implementation of the ACL voter that will run the
+  # 'node_access' Drupal hook, but ignoring the 'sf_acl' module in order to
+  # to avoid running twice.
+  acl.security.node_access.voter:
+    public: false
+    class: MakinaCorpus\Drupal\Sf\Security\Voter\DrupalNodeAccessVoter
     tags: [{name: security.voter}]
