--- a/composer.json
+++ b/composer.json
@@ -33,14 +33,14 @@
     ],
 	"require" : {
 		"psr/log" : "1.*",
-		"symfony/config" : "~3.0",
-		"symfony/dependency-injection" : "~3.0",
-		"symfony/event-dispatcher" : "~3.0",
-		"symfony/expression-language" : "~3.0",
-		"symfony/http-foundation" : "~3.0",
-		"symfony/http-kernel" : "~3.0",
-		"symfony/translation" : "~3.0",
-		"symfony/yaml" : "~2.8|~3.0"
+		"symfony/config" : "~3.0 <3.2",
+		"symfony/dependency-injection" : "~3.0 <3.2",
+		"symfony/event-dispatcher" : "~3.0 <3.2",
+		"symfony/expression-language" : "~3.0 <3.2",
+		"symfony/http-foundation" : "~3.0 <3.2",
+		"symfony/http-kernel" : "~3.0 <3.2",
+		"symfony/translation" : "~3.0 <3.2",
+		"symfony/yaml" : "~2.8|~3.0 <3.2"
 	},
 	"suggests" : {
 		"monolog/monolog" : "Integrates the Drupal 8 logger to monolog",
