--- a/Resources/config/profiler.yml
+++ b/Resources/config/profiler.yml
@@ -5,6 +5,11 @@ services:
         arguments: ["@database", '@?debug.stopwatch']
         tags: [{ name: data_collector, template: "module:sf_dic:Profiler/database.html.twig", id: drupal_database}]
 
+    makinacorpus.drupal_watchdog_collector:
+        class: MakinaCorpus\Drupal\Sf\DataCollector\DrupalWatchdogDataCollector
+        arguments: ["@database", '@?debug.stopwatch']
+        tags: [{ name: data_collector, template: "module:sf_dic:Profiler/watchdog.html.twig", id: drupal_watchdog}]
+
     makinacorpus.entity.manager_proxy:
         public: false
         class: MakinaCorpus\Drupal\Sf\DataCollector\EntityManagerProxy
